# automatic

./: .env.example  .gitignore  .mcp.json  .opencode.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-COMMERCIAL  Makefile  README.md  index.html  landing.html  opencode.json  package-lock.json  package.json  vite.config.ts
src/: Agents.tsx  (+50 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  featured-mcp-servers.json  tauri.conf.json  whats-new.json
src-tauri/.cargo/: config.toml
src-tauri/agents/automatic/: code-reviewer.md  debugger.md  planner.md
src-tauri/assets/marketplace/: collections.json  featured-mcp-servers.json
src-tauri/assets/marketplace/project-templates/: django-web-app.json  docker-containerised-service.json  fastapi-service.json  graphql-api.json  react-native-app.json  ruby-on-rails-api.json  rust-cli-app.json  software-defaults.json  supabase-backend.json  terraform-aws-infrastructure.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/languages/: cpp.mod  csharp.mod  go.mod  java.mod  nextjs.mod  node.mod  php.mod  python.mod  react.mod  ruby.mod  rust.mod  svelte.mod  vue.mod
src-tauri/mcp-marketplace/: brave-search.json  filesystem.json  github.json  linear.json  memory.json  postgres.json  puppeteer.json  slack.json
src-tauri/project-templates/: laravel-api-backend.json  nextjs-saas-starter.json  python-data-pipeline.json  react-component-library.json  tauri-desktop-app.json  terraform-aws-infrastructure.json
src-tauri/rules/auto-docs/: documentation.md
src-tauri/rules/automatic/: automatic-service.md  checklist.md  code-style.md  general.md  process.md
src-tauri/rules/common-docs/: documentation.md
src-tauri/skills/: skill.json
src-tauri/skills/automatic/: SKILL.md  skill.json
src-tauri/skills/automatic-api-design/: SKILL.md  skill.json
src-tauri/skills/automatic-code-review/: SKILL.md  skill.json
src-tauri/skills/automatic-database-design/: SKILL.md  skill.json
src-tauri/skills/automatic-debugging/: SKILL.md  skill.json
src-tauri/skills/automatic-documentation/: SKILL.md  skill.json
src-tauri/skills/automatic-features/: SKILL.md
src-tauri/skills/automatic-llms-txt/: SKILL.md  skill.json
src-tauri/skills/automatic-performance/: SKILL.md  skill.json
src-tauri/skills/automatic-refactoring/: SKILL.md  skill.json
src-tauri/skills/automatic-security-review/: SKILL.md  skill.json
src-tauri/skills/automatic-testing/: SKILL.md  skill.json
src-tauri/skills/laravel-specialist/: SKILL.md
src-tauri/src/: activity.rs  context.rs  core.rs  features.rs  languages.rs  lib.rs  main.rs  mcp.rs  memory.rs  oauth.rs  proxy.rs  recommendations.rs  sync.rs  test_manager.rs
src-tauri/src/agent/: antigravity.rs  claude_code.rs  cline.rs  codex_cli.rs  cursor.rs  droid.rs  gemini_cli.rs  github_copilot.rs  goose.rs  junie.rs  kilo_code.rs  kiro.rs  mod.rs  opencode.rs  warp.rs  zed.rs
src-tauri/src/commands/: activity.rs  agents.rs  ai.rs  app_plugins.rs  credentials.rs  features.rs  flags.rs  groups.rs  mcp_servers.rs  memory.rs  misc.rs  mod.rs  oauth.rs  profile.rs  project_files.rs  projects.rs  recommendations.rs  rules.rs  settings.rs  skill_store.rs  skills.rs  task_log.rs  templates.rs  tokens.rs  tools.rs  user_agents.rs  user_commands.rs  whats_new.rs
src-tauri/src/core/: ai.rs  app_plugins.rs  author.rs  commands.rs  credentials.rs  editors.rs  env_crypto.rs  flags.rs  groups.rs  integrations.rs  marketplace.rs  marketplace_data.rs  mcp_servers.rs  mod.rs  paths.rs  plugins.rs  profile.rs  project_files.rs  project_templates.rs  projects.rs  rules.rs  rules_injection.rs  settings.rs  skill_store.rs  skills.rs  task_log.rs  templates.rs  tools.rs  types.rs  user_agents.rs  whats_new.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/sync/: autodetect.rs  cleanup.rs  drift.rs  engine.rs  helpers.rs  local_skills.rs  mod.rs  rebuild.rs
src-tauri/templates/: Agent Project Brief.md  Session Context.md
(+86 files in other folders)
