[package]
name = "automatic"
version = "0.3.6"
description = "Manage your AI dependencies"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "automatic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3.6.3"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
toml = "1.0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

