[package]
name = "automatic"
version = "0.9.2"
description = "Manage your AI dependencies"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "automatic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.16", features = [
    "server", "transport-io",
    "client", "transport-streamable-http-client-reqwest",
    "auth", "reqwest-native-tls",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "net"] }
url = "2"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
urlencoding = "2"
toml = "1.0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
open = "5"
rand = "0.9"
aes-gcm = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

